# yaml-testing-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  MANIFEST.in  Pipfile  README.md  README_test.yml  pre-commit.sh  pyproject.toml  q  schema.yaml  setup.py  setup.yaml  setup.yml  setup_test.yaml  setup_test.yml  test_entrypoint.py  test_entrypoint_test.yml
.resources/: app.py
.resources/test_entrypoint/: app.py
.trunk/: trunk.yaml
.trunk/configs/: .codespellrc  .isort.cfg  .markdownlint.yaml  .prettierignore  .prettierrc.yml  .style.yapf  .yamllint.yaml  .yapfignore  ruff.toml
_resources/test_entrypoint/: app.py
app/: plugin.py  plugin.yml
assertions/: app.py  app.yaml  app_resource.py  app_test.yaml  resource.py
assertions/test_resources/: app.py
checks/: app.py  app_test.yaml  resource.py
checks/.resources/: app.py
examples/: .resource.py  app.py  app_test.yaml  blank_yaml_test_file.py  no_yaml_test_file.py  operations.py  operations_resource.py  operations_test.yaml  resource.py
examples/add/: app.py  app_test.yml
examples/assertion_example/: app.py  app_test.yml  assertions.py
examples/assertions_example/: app.py  app_test.yml  assertions.py
examples/casts_example/: app.py  app_test.yml  assertions.py
examples/no_yml_test_file/: app.py
examples/patch_example/: app.py  app_test.yml  assertions.py
examples/quick_example/: add.py  add_test.yml  app.py  app_test.yml
examples/resource_example/: app.py  app_test.yml  resource.py
examples/subtract/: app.py  (+1 more)
main/: __init__.py  __init___test.yaml  app.py  app.yaml  app_test.yaml  main.py  main_test.yml  plugin.py  plugin.yaml  plugin_test.yaml
resources/: app.py
test_resources/: app.py
(+344 files in other folders)
