[build-system]
requires = [
  'setuptools>=61.0', 
  'pyyaml==6.0',
] 
build-backend = 'setuptools.build_meta'


[tool.coverage.run]
omit = [
  '*/test_resources/*',
  '*/ignore/*',
  '*_ignore*',
]
branch = true


[tool.coverage.html]
directory = 'htmlcov'


[tool.coverage.report]
exclude_lines = [
  "if __name__ == '__main__':",
  'def example()',
]
fail_under = 90